--- a/vignettes/calculating_methylation_transcription_correlations.Rmd
+++ b/vignettes/calculating_methylation_transcription_correlations.Rmd
@@ -102,7 +102,7 @@ where we want to examine CpG sites. We set these to 5KB upstream and downstream.
 We can also provide a subset of samples that we want to use to calculate the 
 correlation values with the `samples_subset` parameter. 
 The default behaviour is to use try to use all samples, but we use 
-`common_mcprc_samples` since not all samples in `mcrpc_wgbs_hg38_rse` are 
+`common_mcprc_samples` since not all samples in `mcrpc_wgbs_hg38_chr11` are 
 also present in `mcrpc_transcript_counts_normalized`.  
 
 Finally, we can control the memory usage and parallelization with the 
@@ -124,11 +124,11 @@ should jsut take a few minutes.
 
 ```{r, eval=TRUE}
 # Find samples with both WGBS and RNA-seq count data
-common_mcprc_samples = intersect(names(mcrpc_transcript_counts), colnames(mcrpc_wgbs_hg38_rse))
+common_mcprc_samples = intersect(names(mcrpc_transcript_counts), colnames(mcrpc_wgbs_hg38_chr11))
 
 # Calculate CpG methylation-transcription correlations for all TSS on chromosome 11
 system.time({transcript_cpg_meth_cors_mcrpc_samples_5kb = calculate_meth_site_transcript_cors(
-  meth_rse = mcrpc_wgbs_hg38_rse, 
+  meth_rse = mcrpc_wgbs_hg38_chr11, 
   transcript_expression_table = mcrpc_transcript_counts_normalized, 
   samples_subset = common_mcprc_samples, 
   tss_gr = transcript_tss_chr11, 
@@ -230,7 +230,7 @@ transcription for all transcripts on chromosome 11.
 ```{r, eval=TRUE}
 # Calculate gene body methylation-transcription correlations for all TSS on chromosome 11
 system.time({transcript_body_meth_cors_mcrpc_samples = calculate_region_methylation_transcript_cors(
-  meth_rse = mcrpc_wgbs_hg38_rse, 
+  meth_rse = mcrpc_wgbs_hg38_chr11, 
   transcript_expression_table = mcrpc_transcript_counts_normalized, 
   samples_subset = common_mcprc_samples, 
   genomic_regions = transcript_annotation_chr11, 
