Finalized 2nd vignette

--- a/vignettes/calculating_methylation_transcription_correlations.Rmd
+++ b/vignettes/calculating_methylation_transcription_correlations.Rmd
@@ -10,7 +10,8 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  eval = FALSE
 )
 ```
 
@@ -33,7 +34,7 @@ this vignette.
 We now first download a RangedSummarizedExperiment with WGBS data for prostate
 tumour metastases from TumourMethDatasets.
 
-```{r, eval=TRUE}
+```{r}
 # Download mcrpc_wgbs_hg38 from TumourMethDatasets.
 mcrpc_wgbs_hg38_chr11 = download_meth_dataset(dataset = "mcrpc_wgbs_hg38_chr11")
 
@@ -47,7 +48,7 @@ mcrpc_transcript_counts = data.frame(data.table::fread("mcrpc_transcript_counts.
 We now load annotation for our transcripts of interest, in this case
 all protein-coding transcripts annotated by Gencode.
 
-```{r, eval=TRUE}
+```{r}
 # Download Gencode annotation 
 download.file("https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_38/gencode.v38.annotation.gff3.gz", 
     destfile = "gencode.v38.annotation.gff3.gz")
@@ -74,7 +75,7 @@ rm(transcript_annotation)
 Next we will normalize counts data for these transcripts from 
 prostate cancer metastases samples using DESeq2. 
 
-```{r, eval=TRUE}
+```{r}
 # Subset mcrpc_transcript_counts for protein-coding transcripts
 mcrpc_transcript_counts = mcrpc_transcript_counts[transcript_tss_chr11$ID, ]
 
@@ -82,7 +83,7 @@ mcrpc_transcript_counts = mcrpc_transcript_counts[transcript_tss_chr11$ID, ]
 mcrpc_transcript_counts_dds = DESeqDataSetFromMatrix(countData = mcrpc_transcript_counts, 
     colData = data.frame(sample = names(mcrpc_transcript_counts)), design = ~ 1)
 mcrpc_transcript_counts_dds  = estimateSizeFactors(mcrpc_transcript_counts_dds) 
-mcrpc_transcript_counts_normalized = data.frame(counts(mcrpc_transcript_counts_dds, normalized = T))
+mcrpc_transcript_counts_normalized = data.frame(counts(mcrpc_transcript_counts_dds, normalized = TRUE))
 ```
 
 ## Calculating CpG methylation-transcript expression correlation
@@ -120,7 +121,7 @@ the TSS belong to the same chunk, several cores can be used simultaneously
 without drastically increasing RAM consumption. The following example
 should jsut take a few minutes. 
 
-```{r, eval=TRUE}
+```{r}
 # Find samples with both WGBS and RNA-seq count data
 common_mcprc_samples = intersect(names(mcrpc_transcript_counts), colnames(mcrpc_wgbs_hg38_chr11))
 
@@ -146,7 +147,7 @@ the correlation and the distance of the CpG site fo the TSS of the transcript.
 The location of the TSS associated with the results is stored as a GRanges as an 
 attribute called `tss_range`, making it easy to retrieve this information. 
 
-```{r, eval=TRUE}
+```{r}
 # Extract correlation results for ENST00000398606 transcript
 gstp1_cpg_meth_transcript_cors = transcript_cpg_meth_cors_mcrpc_samples_5kb[["ENST00000398606"]]
 
@@ -174,7 +175,7 @@ on the x-axis. This location can be either the actual genomic location on the
 relevant sequence or else the distance relative to the TSS, depending on 
 whether `reference_tss` is set to TRUE or FALSE. 
 
-```{r, eval=TRUE}
+```{r}
 # Plot methylation-transcription correlation values for GSTP1 showing 
 # chromosome 11 position on the x-axis
 meth_cor_plot_absolute_distance = plot_meth_site_values(
@@ -203,7 +204,7 @@ between 2,500 and 1,250 base pairs upstream.
 The returned plots are ggplot objects and can be manipulated in any way that
 a regular ggplot object can. 
 
-```{r, eval=TRUE}
+```{r}
 # Add a dashed line to meth_cor_plot_relative_distance where the correlation is 0
 meth_cor_plot_relative_distance + ggplot2::geom_hline(yintercept = 0, linetype = "dashed")
 ```
@@ -225,7 +226,7 @@ exon.
 Here we'll investigate the relationship between gene body methylation and 
 transcription for all transcripts on chromosome 11. 
 
-```{r, eval=TRUE}
+```{r}
 # Calculate gene body methylation-transcription correlations for all TSS on chromosome 11
 system.time({transcript_body_meth_cors_mcrpc_samples = calculate_region_methylation_transcript_cors(
   meth_rse = mcrpc_wgbs_hg38_chr11, 
