Added biocparallel to calculate_meth_site_transcript_cors

--- a/vignettes/calculating_methylation_transcription_correlations.Rmd
+++ b/vignettes/calculating_methylation_transcription_correlations.Rmd
@@ -138,7 +138,8 @@ system.time({transcript_cpg_meth_cors_mcrpc_samples_5kb <- calculateMethSiteTran
   samples_subset = common_mcprc_samples, 
   tss_gr = transcript_tss_chr11,
   cor_method = "pearson", max_sites_per_chunk = 300000,
-  expand_upstream = 5000, expand_downstream = 5000, ncores = 8)})
+  expand_upstream = 5000, expand_downstream = 5000, BPPARAM = BiocParallel::bpparam())})
+```
 ```
 
 As an example, we'll examine the CpG methylation transcription correlations for 
